(嵌入式): 滚动条css 样式加上我们的类名，避免在 div 嵌入时冲突 #16455

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -628,14 +628,16 @@ strong {
   overflow-x: auto !important;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background: #1f23294d;
-}
+.de-main_scrollbar {
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: #1f23294d;
+  }
 
-::-webkit-scrollbar {
-  width: 8px !important;
-  height: 8px !important;
+  ::-webkit-scrollbar {
+    width: 8px !important;
+    height: 8px !important;
+  }
 }
 
 .ed-scrollbar__thumb {
