refactor(数据大屏): 保持比例填充展示模式优化 (#16716)

--- a/core/core-frontend/src/style/index.less
+++ b/core/core-frontend/src/style/index.less
@@ -604,6 +604,7 @@ strong {
   width: 100%;
   height: 100%;
   display: inherit;
+  justify-content: center;
 }
 
 .preview-content-inner-height-first {
